--- a/Index.html
+++ b/Index.html
@@ -4,13 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="Style.css">
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 </head>
 <body>
-    <header>    
-        <h1>Hello Microverse!</h1>
-    </header>
+
+ <header class="top-bar">
+  <h2 class="logoname">My Logo</h2>
+  <nav >
+    <img src="images\Union.png" alt="logo">
+  </nav>
+</header>
+ <section class="section-data">
+    <h2 class="myname">I’m Mariane
+      Glad to see you!</h2>
+    <h3 class="namedetail">I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</h3>
+    <div><h3 class="connect">LET’S CONNECT</h3></div>
+    <div class="socialmedia">
+      <img class="twitter" src="images\twitter.png" alt="twitter"></div>
+      <img class="dot" src="images\dot.png" alt="dot"></div>
+      <img class="i" src="images\i.png" alt="i"></div>
+      <img class="n" src="images\n.png" alt="n"></div>
+      <img class="m" src="images\M.png" alt="m"></div>
+      <img class="g" src="images\g.png" alt="g"></div>
+      <img class="v" src="images\v.png" alt="v"></div>
+    </section>
 
 </body>
 </html>
