--- a/Index.html
+++ b/Index.html
@@ -11,24 +11,27 @@
 <body>
 
  <header class="top-bar">
-  <h2 class="logoname">My Logo</h2>
+  <a href="#" id="logolink"><h2 class="logoname">My Logo</h2></a>
   <nav >
     <img src="images\Union.png" alt="logo">
   </nav>
 </header>
  <section class="section-data">
-    <h2 class="myname">I’m Mariane
-      Glad to see you!</h2>
-    <h3 class="namedetail">I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</h3>
-    <div><h3 class="connect">LET’S CONNECT</h3></div>
-    <div class="socialmedia">
-      <img class="twitter" src="images\twitter.png" alt="twitter"></div>
-      <img class="dot" src="images\dot.png" alt="dot"></div>
-      <img class="i" src="images\i.png" alt="i"></div>
-      <img class="n" src="images\n.png" alt="n"></div>
-      <img class="m" src="images\M.png" alt="m"></div>
-      <img class="g" src="images\g.png" alt="g"></div>
-      <img class="v" src="images\v.png" alt="v"></div>
+    <h1 class="myname">I’m Surya
+      Glad to see you!</h1>
+    <p class="namedetail">I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+    <div>
+    <h3 class="connect">LET’S CONNECT</h3>
+      <ul class="socialmedia">
+        <li><a href="#"><img class="twitter" src="images\twitter.png" alt="twitter"></a></li>
+        <li><a href="#"><img class="dot" src="images\dot.png" alt="dot"></a></li>
+        <li><a href="#"><img class="i" src="images\i.png" alt="i"></a></li>
+        <li><a href="#"><img class="n" src="images\n.png" alt="n"></a></li>
+        <li><a href="#"><img class="m" src="images\M.png" alt="m"></a></li>
+        <li><a href="#"><img class="g" src="images\g.png" alt="g"></a></li>
+        <li><a href="#"><img class="v" src="images\v.png" alt="v"></a></li>
+      </ul>
+    </div>
     </section>
 
 </body>
