--- a/Index.html
+++ b/Index.html
@@ -17,15 +17,14 @@
   </nav>
 </header>
  <section class="section-data">
-    <h1 class="myname">I’m Surya Glad to see you!</h1>
+    <h1 class="myname">I’m Surya<br>
+      Glad to see you!</h1>
     <p class="namedetail">I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
     <div>
       <h3 class="connect">LET’S CONNECT</h3>
         <ul class="socialmedia">
           <li><a href="#"><img class="twitter" src="images\twitter.png" alt="twitter"></a></li>
-          <li><a href="#"><img class="dot" src="images\dot.png" alt="dot"></a></li>
-          <li><a href="#"><img class="i" src="images\i.png" alt="i"></a></li>
-          <li><a href="#"><img class="n" src="images\n.png" alt="n"></a></li>
+          <li><a href="#"><img class="i" src="images\linkedin.png" alt="i"></a></li>
           <li><a href="#"><img class="m" src="images\M.png" alt="m"></a></li>
           <li><a href="#"><img class="g" src="images\g.png" alt="g"></a></li>
           <li><a href="#"><img class="v" src="images\v.png" alt="v"></a></li>
