--- a/Index.html
+++ b/Index.html
@@ -31,7 +31,170 @@
         </ul>
       </div>
   </section>
-    
+   <section class="experience">
+    <div>
+      <div class="proj1">
+        <div class="proj-content-space">
+          <h2 class="proj-title">Tonic</h2>
+          <nav>
+            <h4 class="cpny">Canopy</h4>
+            <img src="./images/Counter.png" alt="counter" />
+            <span class="project-lang">Back End Dev</span>
+            <img src="./images/Counter.png" alt="counter" />
+            <span>2015</span>
+          </nav>
+          <p class="proj-desc">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </p>
+          <ul class="softwares">
+            <li class="software">html</li>
+            <li class="software">css</li>
+            <li class="software">javascript</li>
+          </ul>
+          <button class="btn">see project</button>
+        </div>
 
+      </div> 
+
+      <div class="proj2">
+        <div class="proj-content-space">
+          <h1 class="proj-title">Multi-Post Stroies</h1>
+          <nav class="proj-img2">
+            <h4 class="cpny">Canopy</h4>
+            <img src="./images/Counter.png" alt="counter" />
+            <span class="project-lang">Back End Dev</span>
+            <img src="./images/Counter.png" alt="counter" />
+            <span>2015</span>
+          </nav>
+          <p class="proj-desc">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </p>
+          <ul class="softwares">
+            <li class="software">html</li>
+            <li class="software">css</li>
+            <li class="software">javascript</li>
+          </ul>
+          <button class="btn">see project</button>
+        </div>
+
+      </div>
+
+      <div class="proj3">
+        <div class="proj-content-space">
+          <h1 class="proj-title">Tonic</h1>
+          <nav class="proj-img2">
+            <h4 class="cpny">Canopy</h4>
+            <img src="./images/Counter.png" alt="counter" />
+            <span class="project-lang">Back End Dev</span>
+            <img src="./images/Counter.png" alt="counter" />
+            <span>2015</span>
+          </nav>
+          <p class="proj-desc">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </p>
+          <ul class="softwares">
+            <li class="software">html</li>
+            <li class="software">css</li>
+            <li class="software">javascript</li>
+          </ul>
+          <button class="btn">see project</button>
+        </div>
+
+      </div>
+
+      <div class="proj4">
+        <div class="proj-content-space">
+          <h1 class="proj-title">Multi-Post Stories</h1>
+          <nav class="proj-img2">
+            <h4 class="cpny">Canopy</h4>
+            <img src="./images/Counter.png" alt="counter" />
+            <span class="project-lang">Back End Dev</span>
+            <img src="./images/Counter.png" alt="counter" />
+            <span>2015</span>
+          </nav>
+          <p class="proj-desc">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </p>
+          <ul class="softwares">
+            <li class="software">html</li>
+            <li class="software">css</li>
+            <li class="software">javascript</li>
+          </ul>
+          <button class="btn">see project</button>
+        </div>
+
+      </div>
+    </div>
+
+   </section> 
+   
+   <section>
+    <div class="myself">
+      <h2 class="name">About<br/>Myself</h2>
+      <p class="text">
+        Hello I’m a software developer! I can help you build a product ,
+        feature or website Look through some of my work and experience! If you
+        like what you see and have a project you need coded, don’t hestiate to
+        contact me.
+      </p>
+      <h3 class="connect text">LET’S CONNECT</h3>
+        <ul class="socialmedia">
+          <li><a href="#"><img class="twitter" src="images\twitter.png" alt="twitter"></a></li>
+          <li><a href="#"><img class="i" src="images\linkedin.png" alt="i"></a></li>
+          <li><a href="#"><img class="m" src="images\M.png" alt="m"></a></li>
+          <li><a href="#"><img class="g" src="images\g.png" alt="g"></a></li>
+          <li><a href="#"><img class="v" src="images\v.png" alt="v"></a></li>
+        </ul>
+        <button class="resume">Get my resume</button>
+    </div>
+    <div>
+      <ul class="pro-languages">
+        <li>
+          <h4 class="tab-title displaytype">Languages</h4>
+          <a href="#">
+            <img src="./images/rightarrow.png" alt="right" class="right-arrow" />
+          </a>
+        </li>
+      </ul>
+      <ul class="frame-list">
+        <li class="frame">
+          <img
+            src="./images/js.png"
+            alt="js"
+            class="ellipse"
+          />
+          <h4 class="frame-name">Javascript</h4>
+        </li>
+        <li class="frame">
+          <img src="./images/html.png" alt="html" class="ellipse" />
+          <h4 class="frame-name">HTML</h4>
+        </li>
+        <li class="frame">
+          <img src="./images/css.png" alt="css" class="ellipse" />
+          <h4 class="frame-name">CSS</h4>
+        </li>
+      </ul>
+      <ul class="pro-languages">
+        <li>
+          <h4 class="tab-title displaytype">Frameworks</h4>
+          <a href="#">
+            <img src="./images/rightarrow.png" alt="right" class="right-arrow" />
+          </a>
+        </li>
+      </ul>
+      <ul class="pro-languages">
+        <li>
+          <h4 class="tab-title displaytype">Skills</h4>
+          <a href="#">
+            <img src="./images/rightarrow.png" alt="right" class="right-arrow" />
+          </a>
+        </li>
+      </ul>
+    </div>
+    </section>
 </body>
 </html>
